scrollbar fix chrome

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -33,7 +33,8 @@ html{
 body{
     background-color: var(--mainBG);
     height: auto;
-    width: 100vw;
+    width: 100%;
+    overflow-x: hidden;
 }
 
 main{
@@ -49,6 +50,10 @@ nav{
     gap: 20px;
     padding: 20px 25px 20px 20px;
     position: fixed;
+
+    &::-webkit-scrollbar{
+        display: none;
+    }
 
     .card{
         width: 100%;
